infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector: # How to find all pods its going to create
    matchLabels:
      app:  tickets
  template: # How to create each pod
    metadata:
      labels:
        app:  tickets
    spec:
      containers:
        - name: tickets
          image: amdockertrain/ticket
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
